--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@miblanchard/react-native-slider": "^1.5.0",
     "react": "16.9.0",
     "react-native": "0.61.1",
+    "react-native-animatable": "^1.3.3",
     "react-native-router-flux": "^4.0.6",
     "react-native-track-player": "^1.1.8",
     "react-native-vector-icons": "^6.6.0",
