--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@miblanchard/react-native-slider": "^1.5.0",
+    "axios": "^0.21.1",
     "react": "16.9.0",
     "react-native": "0.61.1",
     "react-native-animatable": "^1.3.3",
     "react-native-router-flux": "^4.0.6",
     "react-native-track-player": "^1.1.8",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-volume-control": "^1.0.1",
     "react-native-video": "^5.0.2",
+    "react-native-volume-control": "^1.0.1",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
@@ -36,7 +37,9 @@
   "jest": {
     "preset": "react-native"
   },
-  "rnpm":{
-    "assets":["./assets/fonts/"]
+  "rnpm": {
+    "assets": [
+      "./assets/fonts/"
+    ]
   }
 }
