--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Blast",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@miblanchard/react-native-slider": "^1.5.0",
-    "@react-native-firebase/app": "^10.5.0",
-    "@react-native-firebase/messaging": "^10.5.1",
+    "@react-native-firebase/analytics": "^10.8.1",
+    "@react-native-firebase/app": "^10.8.1",
+    "@react-native-firebase/crashlytics": "^10.8.1",
+    "@react-native-firebase/messaging": "^10.8.1",
     "axios": "^0.21.1",
     "react": "16.9.0",
     "react-native": "0.61.1",
     "react-native-animatable": "^1.3.3",
+    "react-native-music-control": "^1.3.0",
     "react-native-router-flux": "^4.0.6",
     "react-native-vector-icons": "^6.6.0",
     "react-native-video": "^5.0.2",
@@ -36,10 +39,5 @@
   },
   "jest": {
     "preset": "react-native"
-  },
-  "rnpm": {
-    "assets": [
-      "./assets/fonts/"
-    ]
   }
 }
