--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "16.9.0",
     "react-native": "0.61.1",
     "react-native-animatable": "^1.3.3",
+    "react-native-flash-message": "^0.1.23",
+    "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-music-control": "^1.3.0",
     "react-native-router-flux": "^4.0.6",
     "react-native-vector-icons": "^6.6.0",
